k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: budget-frontend
  template:
    metadata:
      labels:
        app: budget-frontend
    spec:
      containers:
      - name: frontend
        image: eduardgohl/budget-tracker-frontend:30
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

  selector:
    app: budget-frontend
