k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
spec:
  rules:
  - host: track-your-budget.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: frontend-service
             port:
               number: 80
